--- a/stye.css
+++ b/stye.css
@@ -3,11 +3,15 @@ body {
 }
 
 h1{
-  text-aling: center
+  text-align: center
+}
+
+.principal{
+    background: #cccccc;
 }
 
 p {
-  text-aling: center;
+  text-align: center;
 }
 
 #missão {
@@ -16,4 +20,21 @@ p {
 
 em strong {
   color: #FF0000;
+}
+
+em strong {
+    color: #FF0000;
+
+}
+
+.itens {
+    font-style: italic
+}
+
+.beneficios {
+    background: #FFFFFF;
+}
+
+h2 {
+    text-align: center;
 }
